--- a/css/style.css
+++ b/css/style.css
@@ -245,7 +245,7 @@ body._lock {
       left: -100%;
       width: 100%;
       height: 100%;
-      padding: 90px 20px 30px 20px;
+      padding: 30px 20px 30px 20px;
    }
 
    .menu__body._active {
@@ -259,7 +259,7 @@ body._lock {
       width: 100%;
       height: 100%;
       background-color: #fff;
-      padding: 100px 30px 30px 30px;
+      padding: 25% 30px 30px 30px;
       transition: left 0.5s ease 0s;
       overflow: auto;
    }
@@ -270,13 +270,13 @@ body._lock {
 
    .menu__list {
       flex-direction: column;
-      justify-content: center;
       align-items: center;
+
    }
 
    .menu__link {
       color: #F75E05;
-      line-height: 1.2;
+      line-height: 1.6;
    }
 }
 
