--- a/css/style.css
+++ b/css/style.css
@@ -3602,9 +3602,17 @@ body._lock {
    position: relative;
 }
 
-@media (max-width: 767.98px) {
+@media (max-width: 1087.98px) {
    .long-events-list__event-panel {
       flex-wrap: wrap;
+      gap: 15px;
+   }
+}
+
+@media (max-width: 424.98px) {
+   .long-events-list__event-panel {
+      justify-content: flex-end;
+      align-items: center;
    }
 }
 
@@ -3738,6 +3746,12 @@ body._lock {
    }
 }
 
+@media (max-width: 424.98px) {
+   .long-events-list__clicker-text {
+      display: none;
+   }
+}
+
 .long-events-list__form-search {
    border: 1px solid #D7DADD;
    border-radius: 4px;
@@ -3856,6 +3870,7 @@ body._lock {
 @media (max-width: 991.98px) {
    .long-events-list__block {
       padding: 30px 0px 150px 0px;
+      column-gap: 12px;
    }
 }
 
@@ -3915,6 +3930,18 @@ body._lock {
    flex-direction: column;
    max-width: 390px;
    padding: 24px;
+}
+
+@media (max-width: 991.98px) {
+   .column {
+      flex: 0 1 49%;
+   }
+}
+
+@media (max-width: 767.98px) {
+   .column {
+      flex: 0 1 100%;
+   }
 }
 
 .column__date-block {}
